📝 footer 마크업 적용

--- a/sellerDashBoard.html
+++ b/sellerDashBoard.html
@@ -15,6 +15,50 @@
       </h1>
       <p>판매자 센터</p>
     </header>
+    <main></main>
+    <footer>
+      <nav>
+        <ul class="about-wrap">
+          <li><a href="#">호두샵 소개</a></li>
+          <li><a href="#">이용약관</a></li>
+          <li>
+            <span>
+              <a href="#">개인정보처리방침</a>
+            </span>
+          </li>
+          <li><a href="#">전자금융거래약관</a></li>
+          <li><a href="#">청소년보호정책</a></li>
+          <li><a href="#">제휴문의</a></li>
+        </ul>
+
+        <ul>
+          <li>
+            <a href="#"
+              ><img
+                src="./assets/icon-insta.svg"
+                alt="인스타그램 페이지 바로가기"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./assets/icon-fb.svg" alt="페이스북 페이지 바로가기"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./assets/icon-yt.svg" alt="유튜브 페이지 바로가기"
+            /></a>
+          </li>
+        </ul>
+      </nav>
+      <hr />
+      <address>
+        <span>(주)HODU SHOP</span> <br />
+        제주특별자치도 제주시 동광고 137 제주코딩베이스캠프 <br />
+        사업자 번호 : 000-0000-0000 | 통신판매업 <br />
+        대표 : 김호두
+      </address>
+    </footer>
     <script src="./js/common.js"></script>
     <script src="./js/sellerDashBoard.js"></script>
   </body>
