--- a/sellerDashBoard.html
+++ b/sellerDashBoard.html
@@ -15,7 +15,54 @@
       </h1>
       <p>판매자 센터</p>
     </header>
-    <main></main>
+    <main>
+      <h2>대시보드 <span>백엔드글로벌</span></h2>
+      <button class="uploadBtn">
+        <img src="./assets/icon-plus.svg" alt="" />상품 업로드
+      </button>
+      <section>
+        <nav>
+          <ul>
+            <li>
+              <button class="active">판매중인 상품 <span>(3)</span></button>
+            </li>
+            <li>
+              <button>주문/배송 <span>2</span></button>
+            </li>
+            <li>
+              <button>문의/리뷰 <span>1</span></button>
+            </li>
+            <li><button>통계</button></li>
+            <li><button>스토어 설정</button></li>
+          </ul>
+        </nav>
+
+        <section>
+          <h3 class="sr-only">판매중인 상품</h3>
+
+          <ul class="goods-info-list">
+            <li>상품정보</li>
+            <li>판매가격</li>
+            <li>수정</li>
+            <li>삭제</li>
+          </ul>
+          <ul class="goods">
+            <li>
+              <article>
+                <img src="./assets/담요.png" alt="" />
+                <div class="order-details">
+                  <h4>딥러닝 개발자 무릎 담요</h4>
+                  <p>재고 : <span>370</span>개</p>
+                </div>
+                <p class="price">17,500원</p>
+                <button>수정</button>
+                <button class="deleteBtn">삭제</button>
+              </article>
+            </li>
+          </ul>
+        </section>
+      </section>
+    </main>
     <footer>
       <nav>
         <ul class="about-wrap">
