📝 button 태그 a 태그로 변경 및 판매자 센터 등록

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </li>
           <!-- myPage : 회원에게만 보이는 UI -->
           <li class="myPage" hidden>
-            <button class="myPageBtn">마이페이지</button>
+            <a class="myPageBtn">마이페이지</a>
             <dialog class="myPageModal">
               <button class="goMyPage">마이페이지</button>
               <button class="logout">로그아웃</button>
@@ -48,10 +48,10 @@
           </li>
           <!-- sellerCenter : 판매자에게만 보이는 UI -->
           <li class="sellerCenter" hidden>
-            <button type="button">
+            <a href="sellerDashBoard.html">
               <img src="./assets/icon-shopping-bag.svg" alt="" />
               판매자 센터
-            </button>
+            </a>
           </li>
         </ul>
       </div>
