📝 미사용 코드 주석 처리 및 마크업 수정

--- a/myPage.html
+++ b/myPage.html
@@ -30,17 +30,22 @@
           <span>dummasdasdy</span>
         </li>
         <li>
+          <p>이름</p>
+          <span>dummasdasdy</span>
+        </li>
+        <li>
           <p>휴대폰번호</p>
           <span>010-0000-0000</span>
         </li>
-        <li class="seller-only">
+        <!-- 스토어 이름 및 사업자등록번호 불러오는 api 없어, 주석처리 -->
+        <!-- <li class="seller-only">
           <p>스토어이름</p>
-          <span>dummasdasdy</span>
+          <span class="store-name">dummasdasdy</span>
         </li>
         <li class="seller-only">
           <p>사업자등록번호</p>
-          <span>888-88-88888</span>
-        </li>
+          <span class="company-registration-number">888-88-88888</span>
+        </li> -->
       </ul>
     </main>
     <footer>
