📝 동적 렌더링 코드 마크업 수정 및  주석 처리

--- a/orderList.html
+++ b/orderList.html
@@ -30,34 +30,18 @@
           <li>삭제</li>
         </ul>
         <ul class="goods">
-          <li>
+          <!-- <li>
             <article>
-              <img src="./assets/담요.png" alt="" />
               <div class="goods-details">
                 <h3>딥러닝 개발자 무릎 담요</h3>
-                <p>구매수량 : <span>370</span> 개</p>
+                <p>주문번호 : <span>20250203CD5601774038</span> 개</p>
+                <p>주문상태 : <span>결제완료</span> 개</p>
               </div>
-              <p class="price">17,500원</p>
-              <div>
+              <p class="price">1,204,500원</p>
                 <button>상세보기</button>
                 <button class="deleteBtn">삭제</button>
-              </div>
             </article>
-          </li>
-          <li>
-            <article>
-              <img src="./assets/담요.png" alt="" />
-              <div class="goods-details">
-                <h3>딥러닝 개발자 무릎 담요</h3>
-                <p>구매수량 : <span>370</span> 개</p>
-              </div>
-              <p class="price">17,500원</p>
-              <div>
-                <button>상세보기</button>
-                <button class="deleteBtn">삭제</button>
-              </div>
-            </article>
-          </li>
+          </li> -->
         </ul>
       </section>
     </main>
@@ -104,6 +88,7 @@
         대표 : 김호두
       </address>
     </footer>
+    <script src="./js/common.js"></script>
     <script src="./js/orderList.js"></script>
   </body>
 </html>
