--- a/orderList.html
+++ b/orderList.html
@@ -27,7 +27,7 @@
           <li>주문정보</li>
           <li>총 금액</li>
           <li>상세보기</li>
-          <li>삭제</li>
+          <li>주문취소</li>
         </ul>
         <ul class="goods">
           <!-- <li>
