📝 버튼 클래스 추가

--- a/goods.html
+++ b/goods.html
@@ -118,7 +118,7 @@
       <section class="menubar">
         <h2 class="sr-only">상품정보 메뉴바</h2>
         <ul>
-          <li><button type="button">버튼</button></li>
+          <li><button type="button" class="active">버튼</button></li>
           <li><button type="button">리뷰</button></li>
           <li><button type="button">Q&A</button></li>
           <li><button type="button">반품/교환정보</button></li>
