📝 기존 코드 주석처리

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </section>
       <section class="goodsList">
         <h2 class="sr-only">호두 상품 목록</h2>
-        <article>
+        <!-- <article>
           <a href="#">
             <img src="https://placehold.co/382x382" alt="" />
             <p></p>
@@ -143,7 +143,7 @@
             <h3></h3>
             <p class="price"><span></span>원</p>
           </a>
-        </article>
+        </article> -->
       </section>
     </main>
     <footer>
