💄 더보기 버튼 추가 및 css 적용

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
           </a>
         </article> -->
       </section>
+      <button class="more-btn">더보기</button>
     </main>
     <footer>
       <nav>
