--- a/sellerDashBoard.html
+++ b/sellerDashBoard.html
@@ -50,7 +50,7 @@
           <li>삭제</li>
         </ul>
         <ul class="goods">
-          <li>
+          <!-- <li>
             <article>
               <img src="./assets/담요.png" alt="" />
               <div class="goods-details">
@@ -63,21 +63,7 @@
                 <button class="deleteBtn">삭제</button>
               </div>
             </article>
-          </li>
-          <li>
-            <article>
-              <img src="./assets/담요.png" alt="" />
-              <div class="goods-details">
-                <h3>딥러닝 개발자 무릎 담요</h3>
-                <p>재고 : <span>370</span>개</p>
-              </div>
-              <p class="price">17,500원</p>
-              <div>
-                <button>수정</button>
-                <button class="deleteBtn">삭제</button>
-              </div>
-            </article>
-          </li>
+          </li> -->
         </ul>
       </section>
     </main>
@@ -124,6 +110,7 @@
         대표 : 김호두
       </address>
     </footer>
+    <script src="./js/common.js"></script>
     <script src="./js/sellerDashBoard.js"></script>
   </body>
 </html>
