--- a/goods.html
+++ b/goods.html
@@ -169,6 +169,7 @@
       </address>
     </footer>
     <script src="./js/common.js"></script>
+    <script src="./js/gnb.js"></script>
     <script src="./js/goods.js"></script>
   </body>
 </html>
