--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
       </address>
     </footer>
     <script src="./js/common.js"></script>
+    <script src="./js/gnb.js"></script>
     <script src="./js/main.js"></script>
   </body>
 </html>
