--- a/cart.html
+++ b/cart.html
@@ -191,6 +191,7 @@
       </address>
     </footer>
     <script src="./js/common.js"></script>
+    <script src="./js/gnb.js"></script>
     <script src="./js/cart.js"></script>
   </body>
 </html>
