--- a/sellerGoods.html
+++ b/sellerGoods.html
@@ -15,7 +15,78 @@
       </h1>
       <p>판매자 센터</p>
     </header>
-    <main></main>
+    <main>
+      <h2>상품 등록</h2>
+      <section class="notice">
+        <h3>*상품 등록 주의사항</h3>
+        <ul>
+          <li>너무 귀여운 사진은 심장이 아파올 수 있습니다.</li>
+          <li>
+            유소년에게서 천자만홍이 피고 이상이 온갖 들어 약동하다. 이상의
+            가지에 사랑의 있는가? 주며, 끓는 힘차게 얼음이 얼음 가치를
+            황금시대의 있음으로써 사라지지 것이다. 이 뜨거운지라, 이상의 속에서
+            이것은 피가 보배를 황금시대의 싹이 사막이다.
+          </li>
+          <li>
+            자신과 우는 옷을 지혜는 아니다. 더운지라 설레는 기쁘며, 위하여서,
+            평화스러운 광야에서 그리하였는가? 소담스러운 위하여 인도하겠다는
+            어디 무엇을 이상을 같지 따뜻한 청춘 칼이다.
+          </li>
+          <li>
+            가치를 그들을 예수는 찬미를 가슴이 과실이 이것이다. 희망의
+            것이다.보라, 풍부하게 이것은 황금시대를 얼마나 인간에 돋고,
+            이것이다.
+          </li>
+        </ul>
+      </section>
+      <section class="upload-form">
+        <h3 class="sr-only">상품 등록 폼</h3>
+        <form action="">
+          <fieldset class="image">
+            <legend>상품 이미지</legend>
+            <label for="image"> </label>
+            <input type="file" class="sr-only" id="image" />
+          </fieldset>
+
+          <div>
+            <label for="product-name" class="product-name">
+              상품명
+              <input type="text" id="product-name" />
+              <span>13/20</span>
+            </label>
+            <label for="price" class="price">
+              판매가
+              <input type="text" id="price" />
+            </label>
+            <fieldset>
+              <legend>배송방법</legend>
+              <label for="delivery">
+                택배,소포,등기
+                <input type="radio" name="delivery" id="delivery" />
+              </label>
+              <label for="parcel">
+                직접배송(화물배달)
+                <input type="radio" name="delivery" id="parcel" />
+              </label>
+            </fieldset>
+            <label for="fee" class="fee">
+              기본 배송비
+              <input type="text" />
+            </label>
+            <label for="stock" class="stock">
+              재고
+              <input type="text" />
+            </label>
+          </div>
+          <label for="detail" class="detail">
+            상품 상세 정보
+            <textarea name="detail" id="detail"></textarea>
+          </label>
+          <button type="button">취소</button>
+          <button type="submit">저장하기</button>
+        </form>
+      </section>
+    </main>
     <footer>
       <nav>
         <ul class="about-wrap">
