📝 업로드 허용 이미지 파일 제한

--- a/sellerGoods.html
+++ b/sellerGoods.html
@@ -45,7 +45,12 @@
           <fieldset class="image">
             <legend>상품 이미지</legend>
             <label for="image"> </label>
-            <input type="file" class="sr-only" id="image" />
+            <input
+              type="file"
+              id="image"
+              class="sr-only"
+              accept=".jpg, .png, .gif"
+            />
           </fieldset>
 
           <div>
