✨ 이미지 업로드 시 preview 렌더링 구현

--- a/sellerGoods.html
+++ b/sellerGoods.html
@@ -135,6 +135,7 @@
         대표 : 김호두
       </address>
     </footer>
+    <script src="./js/common.js"></script>
     <script src="./js/sellerGoods.js"></script>
   </body>
 </html>
