📝 상품명 input maxlength 적용

--- a/sellerGoods.html
+++ b/sellerGoods.html
@@ -56,8 +56,8 @@
           <div>
             <label for="product-name" class="product-name">
               상품명
-              <input type="text" id="product-name" />
-              <span>13/20</span>
+              <input type="text" id="product-name" maxlength="20" />
+              <span>0/20</span>
             </label>
             <label for="price" class="price">
               판매가
