📝 radio 기본 check 및 저장하기 버튼 disabled 적용

--- a/sellerGoods.html
+++ b/sellerGoods.html
@@ -66,7 +66,7 @@
               <legend>배송방법</legend>
               <label>
                 택배,소포,등기
-                <input type="radio" name="delivery" value="delivery" />
+                <input type="radio" name="delivery" value="delivery" checked />
               </label>
               <label>
                 직접배송(화물배달)
@@ -87,7 +87,7 @@
             <textarea name="detail" id="detail"></textarea>
           </label>
           <button type="button">취소</button>
-          <button type="submit">저장하기</button>
+          <button type="submit" disabled>저장하기</button>
         </form>
       </section>
     </main>
