📝 라디오 value 값 수정

--- a/sellerGoods.html
+++ b/sellerGoods.html
@@ -66,11 +66,11 @@
               <legend>배송방법</legend>
               <label>
                 택배,소포,등기
-                <input type="radio" name="delivery" value="delivery" checked />
+                <input type="radio" name="delivery" value="PARCEL" checked />
               </label>
               <label>
                 직접배송(화물배달)
-                <input type="radio" name="delivery" value="parcel" />
+                <input type="radio" name="delivery" value="DELIVERY" />
               </label>
             </fieldset>
             <label class="fee">
