--- a/sellerGoodsUpdate.html
+++ b/sellerGoodsUpdate.html
@@ -66,7 +66,7 @@
               <legend>배송방법</legend>
               <label>
                 택배,소포,등기
-                <input type="radio" name="delivery" value="PARCEL" checked />
+                <input type="radio" name="delivery" value="PARCEL" />
               </label>
               <label>
                 직접배송(화물배달)
