--- a/sellerGoodsUpdate.html
+++ b/sellerGoodsUpdate.html
@@ -16,9 +16,9 @@
       <p>판매자 센터</p>
     </header>
     <main>
-      <h2>상품 등록</h2>
+      <h2>상품 수정</h2>
       <section class="notice">
-        <h3>*상품 등록 주의사항</h3>
+        <h3>*상품 수정 주의사항</h3>
         <ul>
           <li>너무 귀여운 사진은 심장이 아파올 수 있습니다.</li>
           <li>
@@ -40,7 +40,7 @@
         </ul>
       </section>
       <section class="upload-form">
-        <h3 class="sr-only">상품 등록 폼</h3>
+        <h3 class="sr-only">상품 수정 폼</h3>
         <form action="">
           <fieldset class="image">
             <legend>상품 이미지</legend>
